Temporarily disabled a lot of unused loops and methods.  Removed unused files.  Added WebCore.  Others.

--- a/QT GUI Aion Hack/QtGuiApplication1.vcxproj.filters
+++ b/QT GUI Aion Hack/QtGuiApplication1.vcxproj.filters
@@ -113,7 +113,7 @@
       <Filter>Header Files\Tools</Filter>
     </ClInclude>
     <ClInclude Include="Tools\CommandLine.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Tools</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
